<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    tools:context=".ShowActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameShow"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="9dp"
            android:enabled="false"
            android:hint="Добдавьте название двигателя"
            android:inputType="text"
            android:text="@string/action_name"
            app:layout_constraintBottom_toTopOf="@+id/i1" />

        <EditText
            android:id="@+id/i1Show"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="9dp"
            android:enabled="true"
            android:hint="@string/action_I1"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/i2Show"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="9dp"
            android:hint="@string/action_I2"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/i3Show"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="9dp"
            android:hint="@string/action_I3"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/takeShow"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="9dp"
            android:onClick="clickInfo"
            android:rotationX="-12"
            android:shadowColor="@color/ic_launcher_background"
            android:text="@string/action_Take"
            app:backgroundTint="?android:attr/colorPressedHighlight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.458" />


        <Button
            android:id="@+id/readShow"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="9dp"
            android:onClick="onClickRead"
            android:rotationX="12"
            android:text="@string/action_Read"
            app:backgroundTint="?android:attr/colorPressedHighlight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.458" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="19dp"
            android:background="?android:attr/colorPressedHighlight"
            android:text="@string/action_InfoShow"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/pairedlistShow"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="9dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/readShow"
            app:layout_constraintVertical_bias="0.122" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/otvet1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/otvet2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.781" />

            <Button
                android:id="@+id/More"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="9dp"
                android:onClick="onClickMore"
                android:rotationX="12"
                android:text="@string/Action_Dop"
                app:backgroundTint="?android:attr/colorPressedHighlight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.458" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="164dp"
                android:layout_height="142dp"
                app:srcCompat="@drawable/green" />

            <TextView
                android:id="@+id/OtvetLast1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="60dp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="164dp"
                android:layout_height="141dp"
                app:srcCompat="@drawable/green" />

            <TextView
                android:id="@+id/OtvetLast2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="60dp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="164dp"
                android:layout_height="141dp"

                app:srcCompat="@drawable/green" />

            <TextView
                android:id="@+id/OtvetLast3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="60dp"
                android:text="TextView" />

        </LinearLayout>
    </LinearLayout>

    </ScrollView>

